# telegram_notifier_python

./: README.md  pyproject.toml
scripts/: test_telegram_notifier.py
telegram_notifier/: __init__.py  telegramConfig.py  telegramNotifier.py
